--- a/closedverse_main/templates/closedverse_main/elements/user-sidebar-info.html
+++ b/closedverse_main/templates/closedverse_main/elements/user-sidebar-info.html
@@ -1,7 +1,7 @@
 {% load closedverse_tags %}<div id="sidebar-profile-body"{% if profile.favorite %} class="with-profile-post-image"{% endif %}>
 	<div class="icon-container {% user_class user %} {% if user.online_status == True %}online{% elif user.online_status == 2 %}afk{% elif user.online_status == False %}offline{% endif %}">
 		<a href="{% url "main:user-view" user.username %}">
-			<img src="{% avatar user.avatar %}" alt="{{ user.nickname }}" class="icon">
+			<img src="{% avatar user %}" alt="{{ user.nickname }}" class="icon">
 		</a>
 	</div>
 	{% if user.get_class.1 %}<p class="user-organization">{% user_level user %}</p>{% endif %}
