Final changes for bugfix update, rebrand back to Closedverse

--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -3,7 +3,7 @@
 {% user_sidebar request user user.profile 0 True %}
 <div class="main-column" id="help">
 <div class="post-list-outline">
-    <h2 class="label">Openverse Rules</h2>
+    <h2 class="label">Closedverse Rules</h2>
       <div class="help-content">
         <p>This page used to only have one rule, but since more problems have risen with only one rule, we have expanded it.</p>
         
