--- a/closedverse_main/templates/closedverse_main/community_list.html
+++ b/closedverse_main/templates/closedverse_main/community_list.html
@@ -48,7 +48,7 @@
 	</div>
 	<div id="community-guide-footer">
 		<div id="guide-menu">
-			<a class="arrow-button" href="{% url "main:help-rules" %}"><span>Openverse Rules</span></a>
+			<a class="arrow-button" href="{% url "main:help-rules" %}"><span>Closedverse Rules</span></a>
 			<a class="arrow-button" href="{% url "main:help-faq" %}"><span>Frequently Asked Questions (FAQ)</span></a>
 			{% if settings.PROD %}
 			<a class="arrow-button" href="{% url "main:help-legal" %}"><span>Legal information</span></a>
