--- a/closedverse_main/templates/closedverse_main/help/email.html
+++ b/closedverse_main/templates/closedverse_main/help/email.html
@@ -5,7 +5,7 @@
     <style>html{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto, Helvetica, Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";}</style>
 </head>
 <body style="text-align:center">
-    <img alt="Openverse" src="{{ menulogo }}">
+    <img alt="The logo" src="{{ menulogo }}">
 	<br>
     <p><i>A password reset request has been submitted for your email.</i></p>
     <p>Follow this link to reset your password: <a href="{{ link }}">{{ link }}</a></p>
