--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -35,6 +35,20 @@
 		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were.</p>
 		<h2>Begging for an unban</h2>
 		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
+		<br>
+		<hr>
+		<h2>Names/branding</h2>
+		<p>I would not advise making anything fanmade for this or about this unless that's stated.</p>
+		<h3>What not to call this</h3>
+		<ul>
+		<li>ClosedVerse</li>
+		<li>CV</li>
+		<li>Openverse</li>
+		<li>Miiverse/Miiverse 2.0</li>
+		</ul>
+		<h3>What to call this</h3>
+		<p>Closedverse</p><br>
+		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
       </div>
   </div>
 </div>
