Might as well update for GH

--- a/closedverse_main/templates/closedverse_main/community_all.html
+++ b/closedverse_main/templates/closedverse_main/community_all.html
@@ -29,5 +29,8 @@
 			{% if has_next %}
 				<a href="{% url "main:community-viewall" %}?offset={{ next }}" class="big-button">Next</a>
 			{% endif %}
+			{% if has_back %}
+				<a href="{% url "main:community-viewall" %}?offset={{ next }}" class="big-button">Next</a>
+			{% endif %}
 	</div>
 {% endblock %}
