--- a/closedverse_main/templates/closedverse_main/elements/community_post.html
+++ b/closedverse_main/templates/closedverse_main/elements/community_post.html
@@ -3,10 +3,10 @@
   {% if with_community_container %}
   <p class="community-container">
 	{% if post.is_reply %}
-	<a class="test-community-link" href="{% url "main:post-view" post.original_post.id %}"><img src="{% avatar post.original_post.creator post.original_post.feeling %}" class="community-icon">
+	<a class="test-community-link" href="{% url "main:post-view" post.original_post_id %}"><img src="{% avatar post.original_post.creator post.original_post.feeling %}" class="community-icon">
 	<span class="reply symbol"></span>Comment on {{ post.original_post.creator.nickname }}'s post</a>
 	{% else %}
-    <a class="test-community-link" {% if post.community.clickable %}href="{% url "main:community-view" post.community.id %}"{% endif %}><img src="{{ post.community.icon }}" class="community-icon">{{ post.community.name }}</a>
+    <a class="test-community-link" {% if post.community.clickable %}href="{% url "main:community-view" post.community_id %}"{% endif %}><img src="{{ post.community.icon }}" class="community-icon">{{ post.community.name }}</a>
 	{% endif %}
   </p>
   {% endif %}
