--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -6,10 +6,10 @@
     <h2 class="label">Closedverse Rules</h2>
       <div class="help-content">
         <p>This page used to only have one rule, but since more problems have risen with only one rule, we have expanded it.</p>
-        
+        <p>Yeah, this page might be long, and it might be strict, but this isn't the Miiverse Code of Conduct.</p>
 		
 		<h2>NSFW</h2>
-		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>We might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning. If this is implemented, this rule will be edited (not implemented as of September 29)</p>
+		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>We might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning. If this is implemented, this rule will be edited (not implemented as of October 19)</p>
 		<h2>Offensive content</h2>
 		<p>It isn't okay if a lot of people can see it, or if it's directed at a person/group. This includes offending furries.</p>
 		<h2>Porn/gore</h2>
@@ -19,16 +19,16 @@
 		<h2>Hate speech</h2>
 		<p>This is strongly forbidden. If we can't talk you out of stopping, then no mercy will be laid on you. If you want a free speech allowing social network, please try <a href="https://gab.ai/">GAB</a>. We are NOT welcome to hate and hate speech, and while you might be reasoning with your "free speech", we are very diverse, and that diversity can be easily offended. Yes, there exist people that can be offended.</p>
 		<h2>Sexual harassment</h2>
-		<p>Unless you're joking, it's disgusting, please don't.</p>
+		<p>Unless you're joking, it's disgusting, please don't. If you are, then you probably don't know what this is.</p>
 		<hr>
 		<h2>Hacking</h2>
 		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
 		<h2>Spam</h2>
 		<p>Please don't, I have an <s>Amazon Web Services</s> DigitalOcean bill to pay at the end of each month.</p>
 		<h2>Yeahing</h2>
-		<p>This is spam. If you use a script to do this, you're paying my bills for the month. I'll let you know when that happens.</p>
+		<p>This is spam, unless it's legit. We'll let you know if you are doing this, and if you don't learn from any staff telling you to stop, you're not going to be able to yeah ;)<br>Yeah scripts are strictly forbidden. If you use one, prepare to die.</p>
 		<h2>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h2>
-		<p>You're not funny, and you won't have any mercy laid on yourself.</p>
+		<p>You're not funny, and you won't have any mercy laid on yourself. You'll know if you're doing this.</p>
 		<br>
 		<hr>
 		<h2>Repeals</h2>
@@ -36,9 +36,11 @@
 		<h2>Begging for an unban</h2>
 		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
 		<br>
+		<br><h2>Age</h2>
+		<p>Most of the time, it's just a number. We don't explicitly allow users under 13 to join, but if you are found being immature and you are under 13 (or 12), you'll be notified. If You Type Like This, You Will Probably Be Dinged As An Example.</p>
 		<hr>
 		<h2>Names/branding</h2>
-		<p>I would not advise making anything fanmade for this or about this unless that's stated.</p>
+		<p>I would not advise making anything fanmade for this or about this without vague approval.</p>
 		<h3>What not to call this</h3>
 		<ul>
 		<li>ClosedVerse</li>
@@ -47,7 +49,10 @@
 		<li>Miiverse/Miiverse 2.0</li>
 		</ul>
 		<h3>What to call this</h3>
-		<p>Closedverse</p><br>
+		<ul>
+		<li>Closedverse</li>
+		<li>Closed</li>
+		</ul><br>
 		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
       </div>
   </div>
