--- a/closedverse_main/templates/closedverse_main/man/users.html
+++ b/closedverse_main/templates/closedverse_main/man/users.html
@@ -11,4 +11,28 @@
         
   </div>
 </div>
+<div id="user-man-template" class="dialog none" data-is-template="1">
+<div class="dialog-inner">
+  <div class="window">
+    <h1 class="window-title"></h1>
+    <div class="window-body">
+		<div class="user-info"></div>
+        <form>
+			<div class="center-input">
+				<input type="text" name="username" placeholder="Username" value=""><br>
+				<input type="text" name="nickname" placeholder="Nickname" value=""><br>
+			</div>
+			<br>
+			<input type="checkbox" name="active" value="1"> Is active<br>
+		</form>
+      <form>
+        <div class="form-buttons">
+          <input type="button" class="olv-modal-close-button gray-button" value="Close">
+          <input type="submit" class="post-button black-button" value="Save">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
 {% endblock %}
