--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -18,7 +18,7 @@
 		<p>Please do not say stuff like "ALLAHU AKBAR" or what have you. I'm being serious. Do that on any other forum or well moderated place and you'll be penalized if you do. It's not a "that's offensive to my culture" thing, content like this is removed on lots of sites for a reason. I'm in trouble if you are, alright? I worked hard on this..</p>
 		<h2>Hate speech</h2>
 		<p>This is strongly forbidden. If we can't talk you out of stopping, then no mercy will be laid on you. If you want a free speech allowing social network, please try <a href="https://gab.ai/">GAB</a>. We are NOT welcome to hate and hate speech, and while you might be reasoning with your "free speech", we are very diverse, and that diversity can be easily offended. Yes, there exist people that can be offended.</p>
-		<h2>Sexual harassment</h2>
+		<h2><i>Unwelcome sexual advances</i></h2>
 		<p>Unless you're joking, it's disgusting, please don't. If you are, then you probably don't know what this is.</p>
 		<hr>
 		<h2>Hacking</h2>
