--- a/closedverse_main/templates/closedverse_main/profile-settings.html
+++ b/closedverse_main/templates/closedverse_main/profile-settings.html
@@ -76,6 +76,30 @@
           </div>
         </div>
       </li>
+      <li>
+        <p class="settings-label"><label for="yeahs_visibility">Who should be able to see your Yeahs given?</label></p>
+        <div class="select-content">
+          <div class="select-button">
+            <select name="yeahs_visibility" id="yeahs_visibility">
+              <option value="0"{% if profile.yeahs_visibility == 0 %} selected{% endif %}>Everyone</option>
+              <option value="1"{% if profile.yeahs_visibility == 1 %} selected{% endif %}>My friends</option>
+              <option value="2"{% if profile.yeahs_visibility == 2 %} selected{% endif %}>Nobody</option>
+            </select>
+          </div>
+        </div>
+      </li>
+      <li>
+        <p class="settings-label"><label for="comments_visibility">Who should be able to see your comments made?</label></p>
+        <div class="select-content">
+          <div class="select-button">
+            <select name="comments_visibility" id="comments_visibility">
+              <option value="0"{% if profile.comments_visibility == 0 %} selected{% endif %}>Everyone</option>
+              <option value="1"{% if profile.comments_visibility == 1 %} selected{% endif %}>My friends</option>
+              <option value="2"{% if profile.comments_visibility == 2 %} selected{% endif %}>Nobody</option>
+            </select>
+          </div>
+        </div>
+      </li>
 	  {% endif %}
 		<li class="setting-nnid">
                 <p class="settings-label">Nintendo Network ID</p>
