--- a/closedverse_main/templates/closedverse_main/user_view.html
+++ b/closedverse_main/templates/closedverse_main/user_view.html
@@ -18,6 +18,7 @@
         </div>
 		{% endif %}
     </div><a class="big-button" href="{% url "main:user-posts" user.username %}">View posts</a>
+	{% if profile.yeahs_visible %}
     <div class="post-list-outline">
         <h2 class="label">Recently yeahed posts</h2>
 		{% if yeahed.count < 1 %}
@@ -34,5 +35,6 @@
         </div>
 		{% endif %}
     </div><a class="big-button" href="{% url "main:user-yeahs" user.username %}">View all yeahs</a>
+	{% endif %}
 </div>
 {% endblock %}
